tests/rosetta/transpiler/Scala/DNS-query.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/DNS-query.scala:4: error: not found: type any
  val res: ArrayBuffer[any] = net.LookupHost("www.kame.net")
                       ^
/workspace/mochi/tests/rosetta/transpiler/Scala/DNS-query.scala:4: error: not found: value net
  val res: ArrayBuffer[any] = net.LookupHost("www.kame.net")
                              ^
/workspace/mochi/tests/rosetta/transpiler/Scala/DNS-query.scala:11: error: not found: value nil
    if (err == nil) {
               ^
three errors found
