tests/rosetta/transpiler/Scala/DNS-query.scala
// Generated by Mochi v0.10.37 on 2025-07-22 20:23:19 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  val res: ArrayBuffer[any] = net.LookupHost("www.kame.net")
  
  val addrs: Any = res(0)
  
  val err: Any = res(1)
  
  def main(args: Array[String]): Unit = {
    if (err == nil) {
      println(String.valueOf(addrs))
    } else {
      println(err)
    }
  }
}
